--- a/css/main.css
+++ b/css/main.css
@@ -21,10 +21,51 @@
 
 .gnb li a {
   display: block;
-  padding: 12px 20px;
+  padding: 0px 20px;
   font-weight: 700;
   font-size: 18px;
   color: var(--title-color);
+}
+
+.gnb li a i {
+  /* border: 1px solid #f00; */
+  display: block;
+  padding: 12px 0;
+
+  position: relative;
+}
+
+.gnb li a i::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+
+  /* 가로 기준 중앙 정렬 */
+  /* left: 50%;
+  transform: translateX(-50%); trftx */
+
+  /* hover 했을 때는 서로 반대로 설정 */
+  left: auto;
+  right: 0;
+
+  width: 0%;
+  height: 3px;
+  background: var(--main-color);
+
+  transition: 0.4s;
+}
+
+.gnb li a:hover {
+  color: var(--main-color);
+}
+
+.gnb li a:hover i::after {
+  width: 100%;
+
+  /* hover 했을 때는 서로 반대로 설정 */
+  left: 0;
+  right: auto;
 }
 
 .btn-search {
